--- a/package.json
+++ b/package.json
@@ -1,25 +1,36 @@
 {
   "name": "@hexlet/code",
   "version": "1.0.0",
+  "description": "This project compiles 5 console games to train your brain.",
+  "main": "index.js",
   "type": "module",
-  "description": "[![Actions Status](https://github.com/NikitaVarnavsky/frontend-project-44/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/NikitaVarnavsky/frontend-project-44/actions)",
   "bin": {
     "brain-games": "bin/brain-games.js",
-    "brain-even": "bin/brain-even.js"
+    "brain-even": "bin/brain-even.js",
+    "brain-calc": "bin/brain-calc.js",
+    "brain-gcd": "bin/brain-gcd.js",
+    "brain-progression": "bin/brain-progression.js",
+    "brain-prime": "bin/brain-prime.js"
   },
-  "main": "bin/brain-games.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Gruf1/frontend-project-44.git"
+  },
+  "author": "Andrey Nikonov",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Gruf1/frontend-project-44/issues"
+  },
+  "homepage": "https://github.com/Gruf1/frontend-project-44#readme",
   "dependencies": {
     "readline-sync": "^1.4.10"
   },
   "devDependencies": {
-    "eslint": "^8.50.0",
+    "eslint": "^8.22.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-react": "^7.33.2"
+    "eslint-plugin-import": "^2.26.0"
   }
 }
